git-svn-id: svn://svn.code.sf.net/p/tagmotion/code@4 1749c763-a199-4c25-9f7b-6e07fd92ae0b

--- a/TagMotion/Chrismo.TagMotion.csproj
+++ b/TagMotion/Chrismo.TagMotion.csproj
@@ -13,6 +13,8 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ApplicationIcon>vinyl.ico</ApplicationIcon>
+    <StartupObject>
+    </StartupObject>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
