--- a/TagMotion/Chrismo.TagMotion.csproj
+++ b/TagMotion/Chrismo.TagMotion.csproj
@@ -61,6 +61,139 @@
   <ItemGroup>
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="Collection.cs" />
+    <Compile Include="Externals\TagLib\Aac\AudioHeader.cs" />
+    <Compile Include="Externals\TagLib\Aac\BitStream.cs" />
+    <Compile Include="Externals\TagLib\Aac\File.cs" />
+    <Compile Include="Externals\TagLib\Aiff\File.cs" />
+    <Compile Include="Externals\TagLib\Aiff\StreamHeader.cs" />
+    <Compile Include="Externals\TagLib\Ape\File.cs" />
+    <Compile Include="Externals\TagLib\Ape\Footer.cs" />
+    <Compile Include="Externals\TagLib\Ape\Item.cs" />
+    <Compile Include="Externals\TagLib\Ape\StreamHeader.cs" />
+    <Compile Include="Externals\TagLib\Ape\Tag.cs" />
+    <Compile Include="Externals\TagLib\Asf\ContentDescriptionObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\ContentDescriptor.cs" />
+    <Compile Include="Externals\TagLib\Asf\DescriptionRecord.cs" />
+    <Compile Include="Externals\TagLib\Asf\ExtendedContentDescriptionObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\File.cs" />
+    <Compile Include="Externals\TagLib\Asf\FilePropertiesObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\Guid.cs" />
+    <Compile Include="Externals\TagLib\Asf\HeaderExtensionObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\HeaderObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\MetadataLibraryObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\Object.cs" />
+    <Compile Include="Externals\TagLib\Asf\PaddingObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\StreamPropertiesObject.cs" />
+    <Compile Include="Externals\TagLib\Asf\Tag.cs" />
+    <Compile Include="Externals\TagLib\Asf\UnknownObject.cs" />
+    <Compile Include="Externals\TagLib\ByteVector.cs" />
+    <Compile Include="Externals\TagLib\ByteVectorList.cs" />
+    <Compile Include="Externals\TagLib\CombinedTag.cs" />
+    <Compile Include="Externals\TagLib\CorruptFileException.cs" />
+    <Compile Include="Externals\TagLib\Debugger.cs" />
+    <Compile Include="Externals\TagLib\File.cs" />
+    <Compile Include="Externals\TagLib\FileTypes.cs" />
+    <Compile Include="Externals\TagLib\Flac\Block.cs" />
+    <Compile Include="Externals\TagLib\Flac\BlockHeader.cs" />
+    <Compile Include="Externals\TagLib\Flac\File.cs" />
+    <Compile Include="Externals\TagLib\Flac\Picture.cs" />
+    <Compile Include="Externals\TagLib\Flac\StreamHeader.cs" />
+    <Compile Include="Externals\TagLib\Genres.cs" />
+    <Compile Include="Externals\TagLib\ICodec.cs" />
+    <Compile Include="Externals\TagLib\Id3v1\StringHandler.cs" />
+    <Compile Include="Externals\TagLib\Id3v1\Tag.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\ExtendedHeader.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Footer.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\FrameFactory.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\FrameHeader.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\CommentsFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\PlayCountFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\PopularimeterFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\PrivateFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\UnknownFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\FrameTypes.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Header.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\SynchData.cs" />
+    <Compile Include="Externals\TagLib\Id3v2\Tag.cs" />
+    <Compile Include="Externals\TagLib\IntList.cs" />
+    <Compile Include="Externals\TagLib\ListBase.cs" />
+    <Compile Include="Externals\TagLib\Mpc\File.cs" />
+    <Compile Include="Externals\TagLib\Mpc\StreamHeader.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\AppleTag.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Box.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\AppleAdditionalInfoBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\AppleAnnotationBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\AppleDataBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\AppleElementaryStreamDescriptor.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\AppleItemListBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\FullBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoAudioSampleEntry.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoChunkLargeOffsetBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoChunkOffsetBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoFreeSpaceBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoHandlerBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoMetaBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoMovieHeaderBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoSampleDescriptionBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoSampleEntry.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoSampleTableBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoUserDataBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\IsoVisualSampleEntry.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\Boxes\UnknownBox.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\BoxFactory.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\BoxHeader.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\BoxTypes.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\File.cs" />
+    <Compile Include="Externals\TagLib\Mpeg4\FileParser.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\AudioFile.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\AudioHeader.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\File.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\VBRIHeader.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\VideoHeader.cs" />
+    <Compile Include="Externals\TagLib\Mpeg\XingHeader.cs" />
+    <Compile Include="Externals\TagLib\NonContainer\EndTag.cs" />
+    <Compile Include="Externals\TagLib\NonContainer\File.cs" />
+    <Compile Include="Externals\TagLib\NonContainer\StartTag.cs" />
+    <Compile Include="Externals\TagLib\NonContainer\Tag.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Bitstream.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Codec.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Codecs\Theora.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Codecs\Vorbis.cs" />
+    <Compile Include="Externals\TagLib\Ogg\File.cs" />
+    <Compile Include="Externals\TagLib\Ogg\GroupedComment.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Page.cs" />
+    <Compile Include="Externals\TagLib\Ogg\PageHeader.cs" />
+    <Compile Include="Externals\TagLib\Ogg\Paginator.cs" />
+    <Compile Include="Externals\TagLib\Ogg\XiphComment.cs" />
+    <Compile Include="Externals\TagLib\Picture.cs" />
+    <Compile Include="Externals\TagLib\Properties.cs" />
+    <Compile Include="Externals\TagLib\ReadOnlyByteVector.cs" />
+    <Compile Include="Externals\TagLib\Riff\AviHeaderList.cs" />
+    <Compile Include="Externals\TagLib\Riff\AviStream.cs" />
+    <Compile Include="Externals\TagLib\Riff\BitmapInfoHeader.cs" />
+    <Compile Include="Externals\TagLib\Riff\DivXTag.cs" />
+    <Compile Include="Externals\TagLib\Riff\File.cs" />
+    <Compile Include="Externals\TagLib\Riff\InfoTag.cs" />
+    <Compile Include="Externals\TagLib\Riff\List.cs" />
+    <Compile Include="Externals\TagLib\Riff\ListTag.cs" />
+    <Compile Include="Externals\TagLib\Riff\MovieIdTag.cs" />
+    <Compile Include="Externals\TagLib\Riff\WaveFormatEx.cs" />
+    <Compile Include="Externals\TagLib\StringList.cs" />
+    <Compile Include="Externals\TagLib\SupportedMimeType.cs" />
+    <Compile Include="Externals\TagLib\Tag.cs" />
+    <Compile Include="Externals\TagLib\UnsupportedFormatException.cs" />
+    <Compile Include="Externals\TagLib\WavPack\File.cs" />
+    <Compile Include="Externals\TagLib\WavPack\StreamHeader.cs" />
     <Compile Include="Filter.cs" />
     <Compile Include="File.cs" />
     <Compile Include="Forms\AboutBox.cs">
@@ -148,6 +281,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Externals\TagLib\TagLib.sources" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -160,147 +294,6 @@
     </Compile>
     <Compile Include="Record.cs" />
     <Compile Include="Settings.cs" />
-    <Compile Include="TagLib\Aac\AudioHeader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TagLib\Aac\BitStream.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TagLib\Aac\File.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TagLib\Aiff\File.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TagLib\Aiff\StreamHeader.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="TagLib\Ape\File.cs" />
-    <Compile Include="TagLib\Ape\Footer.cs" />
-    <Compile Include="TagLib\Ape\Item.cs" />
-    <Compile Include="TagLib\Ape\StreamHeader.cs" />
-    <Compile Include="TagLib\Ape\Tag.cs" />
-    <Compile Include="TagLib\Asf\ContentDescriptionObject.cs" />
-    <Compile Include="TagLib\Asf\ContentDescriptor.cs" />
-    <Compile Include="TagLib\Asf\DescriptionRecord.cs" />
-    <Compile Include="TagLib\Asf\ExtendedContentDescriptionObject.cs" />
-    <Compile Include="TagLib\Asf\File.cs" />
-    <Compile Include="TagLib\Asf\FilePropertiesObject.cs" />
-    <Compile Include="TagLib\Asf\Guid.cs" />
-    <Compile Include="TagLib\Asf\HeaderExtensionObject.cs" />
-    <Compile Include="TagLib\Asf\HeaderObject.cs" />
-    <Compile Include="TagLib\Asf\MetadataLibraryObject.cs" />
-    <Compile Include="TagLib\Asf\Object.cs" />
-    <Compile Include="TagLib\Asf\PaddingObject.cs" />
-    <Compile Include="TagLib\Asf\StreamPropertiesObject.cs" />
-    <Compile Include="TagLib\Asf\Tag.cs" />
-    <Compile Include="TagLib\Asf\UnknownObject.cs" />
-    <Compile Include="TagLib\ByteVector.cs" />
-    <Compile Include="TagLib\ByteVectorList.cs" />
-    <Compile Include="TagLib\CombinedTag.cs" />
-    <Compile Include="TagLib\CorruptFileException.cs" />
-    <Compile Include="TagLib\File.cs" />
-    <Compile Include="TagLib\FileTypes.cs" />
-    <Compile Include="TagLib\Flac\Block.cs" />
-    <Compile Include="TagLib\Flac\BlockHeader.cs" />
-    <Compile Include="TagLib\Flac\File.cs" />
-    <Compile Include="TagLib\Flac\Picture.cs" />
-    <Compile Include="TagLib\Flac\StreamHeader.cs" />
-    <Compile Include="TagLib\Genres.cs" />
-    <Compile Include="TagLib\ICodec.cs" />
-    <Compile Include="TagLib\Id3v1\StringHandler.cs" />
-    <Compile Include="TagLib\Id3v1\Tag.cs" />
-    <Compile Include="TagLib\Id3v2\ExtendedHeader.cs" />
-    <Compile Include="TagLib\Id3v2\Footer.cs" />
-    <Compile Include="TagLib\Id3v2\Frame.cs" />
-    <Compile Include="TagLib\Id3v2\FrameFactory.cs" />
-    <Compile Include="TagLib\Id3v2\FrameHeader.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\AttachedPictureFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\CommentsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\GeneralEncapsulatedObjectFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\MusicCdIdentifierFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PlayCountFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PopularimeterFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\PrivateFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\RelativeVolumeFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\SynchronizedLyricsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\TermsOfUseFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\TextIdentificationFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UniqueFileIdentifierFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UnknownFrame.cs" />
-    <Compile Include="TagLib\Id3v2\Frames\UnsynchronisedLyricsFrame.cs" />
-    <Compile Include="TagLib\Id3v2\FrameTypes.cs" />
-    <Compile Include="TagLib\Id3v2\Header.cs" />
-    <Compile Include="TagLib\Id3v2\SynchData.cs" />
-    <Compile Include="TagLib\Id3v2\Tag.cs" />
-    <Compile Include="TagLib\ListBase.cs" />
-    <Compile Include="TagLib\Mpc\File.cs" />
-    <Compile Include="TagLib\Mpc\StreamHeader.cs" />
-    <Compile Include="TagLib\Mpeg4\AppleTag.cs" />
-    <Compile Include="TagLib\Mpeg4\Box.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\AppleAdditionalInfoBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\AppleAnnotationBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\AppleDataBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\AppleElementaryStreamDescriptor.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\AppleItemListBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\FullBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoAudioSampleEntry.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoChunkLargeOffsetBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoChunkOffsetBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoFreeSpaceBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoHandlerBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoMetaBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoMovieHeaderBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoSampleDescriptionBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoSampleEntry.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoSampleTableBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoUserDataBox.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\IsoVisualSampleEntry.cs" />
-    <Compile Include="TagLib\Mpeg4\Boxes\UnknownBox.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxFactory.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxHeader.cs" />
-    <Compile Include="TagLib\Mpeg4\BoxTypes.cs" />
-    <Compile Include="TagLib\Mpeg4\File.cs" />
-    <Compile Include="TagLib\Mpeg4\FileParser.cs" />
-    <Compile Include="TagLib\Mpeg\AudioFile.cs" />
-    <Compile Include="TagLib\Mpeg\AudioHeader.cs" />
-    <Compile Include="TagLib\Mpeg\File.cs" />
-    <Compile Include="TagLib\Mpeg\VBRIHeader.cs" />
-    <Compile Include="TagLib\Mpeg\VideoHeader.cs" />
-    <Compile Include="TagLib\Mpeg\XingHeader.cs" />
-    <Compile Include="TagLib\NonContainer\EndTag.cs" />
-    <Compile Include="TagLib\NonContainer\File.cs" />
-    <Compile Include="TagLib\NonContainer\StartTag.cs" />
-    <Compile Include="TagLib\NonContainer\Tag.cs" />
-    <Compile Include="TagLib\Ogg\Bitstream.cs" />
-    <Compile Include="TagLib\Ogg\Codec.cs" />
-    <Compile Include="TagLib\Ogg\Codecs\Theora.cs" />
-    <Compile Include="TagLib\Ogg\Codecs\Vorbis.cs" />
-    <Compile Include="TagLib\Ogg\File.cs" />
-    <Compile Include="TagLib\Ogg\GroupedComment.cs" />
-    <Compile Include="TagLib\Ogg\Page.cs" />
-    <Compile Include="TagLib\Ogg\PageHeader.cs" />
-    <Compile Include="TagLib\Ogg\Paginator.cs" />
-    <Compile Include="TagLib\Ogg\XiphComment.cs" />
-    <Compile Include="TagLib\Picture.cs" />
-    <Compile Include="TagLib\Properties.cs" />
-    <Compile Include="TagLib\ReadOnlyByteVector.cs" />
-    <Compile Include="TagLib\Riff\AviHeaderList.cs" />
-    <Compile Include="TagLib\Riff\AviStream.cs" />
-    <Compile Include="TagLib\Riff\BitmapInfoHeader.cs" />
-    <Compile Include="TagLib\Riff\DivXTag.cs" />
-    <Compile Include="TagLib\Riff\File.cs" />
-    <Compile Include="TagLib\Riff\InfoTag.cs" />
-    <Compile Include="TagLib\Riff\List.cs" />
-    <Compile Include="TagLib\Riff\ListTag.cs" />
-    <Compile Include="TagLib\Riff\MovieIdTag.cs" />
-    <Compile Include="TagLib\Riff\WaveFormatEx.cs" />
-    <Compile Include="TagLib\StringList.cs" />
-    <Compile Include="TagLib\SupportedMimeType.cs" />
-    <Compile Include="TagLib\Tag.cs" />
-    <Compile Include="TagLib\UnsupportedFormatException.cs" />
-    <Compile Include="TagLib\WavPack\File.cs" />
-    <Compile Include="TagLib\WavPack\StreamHeader.cs" />
     <Compile Include="TreeviewHandler.cs" />
     <Compile Include="Utilities.cs" />
   </ItemGroup>
@@ -330,7 +323,7 @@
     <Content Include="vinyl.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="TagLib\Mpeg\Packets\" />
+    <Folder Include="Externals\TagLib\Mpeg\Packets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
